--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -465,4 +465,7 @@
   <data name="Money" xml:space="preserve">
     <value>Money</value>
   </data>
+  <data name="Application" xml:space="preserve">
+    <value>Application</value>
+  </data>
 </root>
