--- a/Alicargo.Core/Resources/Entities.ru.resx
+++ b/Alicargo.Core/Resources/Entities.ru.resx
@@ -454,7 +454,7 @@
     <value>Электронные адреса</value>
   </data>
   <data name="Balance" xml:space="preserve">
-    <value>Баланс</value>
+    <value>Сальдо</value>
   </data>
   <data name="Comment" xml:space="preserve">
     <value>Комментарий</value>
