--- a/Alicargo.Core/Resources/Entities.ru.resx
+++ b/Alicargo.Core/Resources/Entities.ru.resx
@@ -468,4 +468,7 @@
   <data name="Money" xml:space="preserve">
     <value>Деньги</value>
   </data>
+  <data name="Client" xml:space="preserve">
+    <value>Клиент</value>
+  </data>
 </root>
