--- a/Alicargo.DataAccess.Contracts/Resources/EventType.ru.resx
+++ b/Alicargo.DataAccess.Contracts/Resources/EventType.ru.resx
@@ -159,4 +159,7 @@
   <data name="Torg12FileUploaded" xml:space="preserve">
     <value>Загружен Торг 12</value>
   </data>
+  <data name="SetSender" xml:space="preserve">
+    <value>Установка отправителя</value>
+  </data>
 </root>
