--- a/Alicargo/Resources/Pages.ru.resx
+++ b/Alicargo/Resources/Pages.ru.resx
@@ -381,4 +381,7 @@
   <data name="DefineByContry" xml:space="preserve">
     <value>Определить по стране</value>
   </data>
+  <data name="DefineByCity" xml:space="preserve">
+    <value>Определить по городу</value>
+  </data>
 </root>
