set forwarder event

--- a/Alicargo.DataAccess.Contracts/Resources/EventType.resx
+++ b/Alicargo.DataAccess.Contracts/Resources/EventType.resx
@@ -162,4 +162,7 @@
   <data name="SetSender" xml:space="preserve">
     <value>Set sender</value>
   </data>
+  <data name="SetForwarder" xml:space="preserve">
+    <value>Set forwarder</value>
+  </data>
 </root>
