edit carrier as forwarder

--- a/Alicargo/Resources/Pages.resx
+++ b/Alicargo/Resources/Pages.resx
@@ -384,4 +384,7 @@
   <data name="DefineByCity" xml:space="preserve">
     <value>Define by city</value>
   </data>
+  <data name="Carriers" xml:space="preserve">
+    <value>Carriers</value>
+  </data>
 </root>
