--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -480,4 +480,7 @@
   <data name="Countries" xml:space="preserve">
     <value>Countries</value>
   </data>
+  <data name="Carrier" xml:space="preserve">
+    <value>Carrier</value>
+  </data>
 </root>
