--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -151,7 +151,7 @@
     <value>Confirm the new password</value>
   </data>
   <data name="Contacts" xml:space="preserve">
-    <value>Contact</value>
+    <value>Contacts</value>
   </data>
   <data name="Count" xml:space="preserve">
     <value>Quantity</value>
