--- a/Alicargo.Core/Resources/Entities.ru.resx
+++ b/Alicargo.Core/Resources/Entities.ru.resx
@@ -334,7 +334,7 @@
     <value>Flight cost (€)</value>
   </data>
   <data name="FactureCost" xml:space="preserve">
-    <value>Фактура (€)</value>
+    <value>Фактура T1 (€)</value>
   </data>
   <data name="Insurance" xml:space="preserve">
     <value>Страховка</value>
@@ -394,7 +394,7 @@
     <value>Прибыль (всего, €)</value>
   </data>
   <data name="FactureCostEdited" xml:space="preserve">
-    <value>Фактура* (€)</value>
+    <value>Фактура T1* (€)</value>
   </data>
   <data name="ScotchCostEdited" xml:space="preserve">
     <value>Скотч* (€)</value>
@@ -476,5 +476,11 @@
   </data>
   <data name="Carrier" xml:space="preserve">
     <value>Курьер</value>
+  </data>
+  <data name="FactureCostEx" xml:space="preserve">
+    <value>Фактура EX-1 (€)</value>
+  </data>
+  <data name="FactureCostExEdited" xml:space="preserve">
+    <value>Фактура EX-1* (€)</value>
   </data>
 </root>
