--- a/Alicargo.Core/Resources/Entities.it.resx
+++ b/Alicargo.Core/Resources/Entities.it.resx
@@ -340,7 +340,7 @@
     <value>Flight cost (€)</value>
   </data>
   <data name="FactureCost" xml:space="preserve">
-    <value>Fattura (€)</value>
+    <value>Fattura T1 (€)</value>
   </data>
   <data name="Insurance" xml:space="preserve">
     <value>Assicurazione</value>
@@ -400,7 +400,7 @@
     <value>Utile (totale, €)</value>
   </data>
   <data name="FactureCostEdited" xml:space="preserve">
-    <value>Fattura* (€)</value>
+    <value>Fattura T1* (€)</value>
   </data>
   <data name="ScotchCostEdited" xml:space="preserve">
     <value>Nastro* (€)</value>
@@ -443,5 +443,11 @@
   </data>
   <data name="Language" xml:space="preserve">
     <value>Language</value>
+  </data>
+  <data name="FactureCostEx" xml:space="preserve">
+    <value>Fattura EX-1 (€)</value>
+  </data>
+  <data name="FactureCostExEdited" xml:space="preserve">
+    <value>Fattura EX-1* (€)</value>
   </data>
 </root>
