--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -486,4 +486,10 @@
   <data name="FactureCostExEdited" xml:space="preserve">
     <value>Facture EX-1* (€)</value>
   </data>
+  <data name="InsuranceRate" xml:space="preserve">
+    <value>Insurance (%)</value>
+  </data>
+  <data name="InsuranceRateForClient" xml:space="preserve">
+    <value>Insurance to client (%)</value>
+  </data>
 </root>
