--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -492,4 +492,7 @@
   <data name="InsuranceRateForClient" xml:space="preserve">
     <value>Insurance to client (%)</value>
   </data>
+  <data name="InsuranceForClient" xml:space="preserve">
+    <value>Insurance (Client)</value>
+  </data>
 </root>
