--- a/Alicargo.DataAccess.Contracts/Resources/EventType.ru.resx
+++ b/Alicargo.DataAccess.Contracts/Resources/EventType.ru.resx
@@ -195,4 +195,7 @@
   <data name="SetAwb" xml:space="preserve">
     <value>Заявке установлена накладная</value>
   </data>
+  <data name="SetBroker" xml:space="preserve">
+    <value>Установка брокера</value>
+  </data>
 </root>
