--- a/Alicargo/Resources/Pages.resx
+++ b/Alicargo/Resources/Pages.resx
@@ -393,4 +393,7 @@
   <data name="BillSettings" xml:space="preserve">
     <value>Bill settings</value>
   </data>
+  <data name="Send" xml:space="preserve">
+    <value>Send</value>
+  </data>
 </root>
