--- a/Alicargo/Resources/Pages.ru.resx
+++ b/Alicargo/Resources/Pages.ru.resx
@@ -393,4 +393,7 @@
   <data name="BillSettings" xml:space="preserve">
     <value>Настройки счета</value>
   </data>
+  <data name="Send" xml:space="preserve">
+    <value>Отправить</value>
+  </data>
 </root>
