--- a/Alicargo/Resources/Pages.ru.resx
+++ b/Alicargo/Resources/Pages.ru.resx
@@ -396,4 +396,7 @@
   <data name="Send" xml:space="preserve">
     <value>Отправить</value>
   </data>
+  <data name="Download" xml:space="preserve">
+    <value>Загрузить</value>
+  </data>
 </root>
