--- a/Alicargo/Resources/Validation.resx
+++ b/Alicargo/Resources/Validation.resx
@@ -135,4 +135,7 @@
   <data name="UserNotFound" xml:space="preserve">
     <value>User not found</value>
   </data>
+  <data name="InvalidValue" xml:space="preserve">
+    <value>Invalid value</value>
+  </data>
 </root>
