--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -489,4 +489,10 @@
   <data name="InsuranceRate" xml:space="preserve">
     <value>Insurance (%)</value>
   </data>
+  <data name="ContractDate" xml:space="preserve">
+    <value>Contract date</value>
+  </data>
+  <data name="ContractNumber" xml:space="preserve">
+    <value>Contract number</value>
+  </data>
 </root>
