--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -495,4 +495,7 @@
   <data name="ContractNumber" xml:space="preserve">
     <value>Contract number</value>
   </data>
+  <data name="OtherFiles" xml:space="preserve">
+    <value>Other files</value>
+  </data>
 </root>
