added MRN and CountInInvoce fields

--- a/Alicargo.Core/Resources/Entities.ru.resx
+++ b/Alicargo.Core/Resources/Entities.ru.resx
@@ -498,4 +498,10 @@
   <data name="Pickup" xml:space="preserve">
     <value>Самовывоз</value>
   </data>
+  <data name="CountInInvoce" xml:space="preserve">
+    <value>Количество в инвойсе</value>
+  </data>
+  <data name="MRN" xml:space="preserve">
+    <value>MRN</value>
+  </data>
 </root>
