--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -507,4 +507,10 @@
   <data name="T1" xml:space="preserve">
     <value>T1</value>
   </data>
+  <data name="CountInInvoce" xml:space="preserve">
+    <value>Count in Invoce</value>
+  </data>
+  <data name="MRN" xml:space="preserve">
+    <value>MRN</value>
+  </data>
 </root>
