added DocumentWeight field

--- a/Alicargo.Core/Resources/Entities.ru.resx
+++ b/Alicargo.Core/Resources/Entities.ru.resx
@@ -504,4 +504,7 @@
   <data name="MRN" xml:space="preserve">
     <value>MRN</value>
   </data>
+  <data name="DocumentWeight" xml:space="preserve">
+    <value>Вес по документам</value>
+  </data>
 </root>
