--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -513,4 +513,7 @@
   <data name="MRN" xml:space="preserve">
     <value>MRN</value>
   </data>
+  <data name="DocumentWeight" xml:space="preserve">
+    <value>Document Weight</value>
+  </data>
 </root>
