--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -516,4 +516,7 @@
   <data name="DocumentWeight" xml:space="preserve">
     <value>Document Weight</value>
   </data>
+  <data name="Comments" xml:space="preserve">
+    <value>Comments</value>
+  </data>
 </root>
