--- a/Alicargo.Core/Resources/Entities.ru.resx
+++ b/Alicargo.Core/Resources/Entities.ru.resx
@@ -507,4 +507,7 @@
   <data name="DocumentWeight" xml:space="preserve">
     <value>Вес по документам</value>
   </data>
+  <data name="Comments" xml:space="preserve">
+    <value>Комментарии</value>
+  </data>
 </root>
