--- a/Alicargo.Core/Resources/Entities.ru.resx
+++ b/Alicargo.Core/Resources/Entities.ru.resx
@@ -460,7 +460,7 @@
     <value>Дата</value>
   </data>
   <data name="Sum" xml:space="preserve">
-    <value> Сумма</value>
+    <value>Сумма</value>
   </data>
   <data name="Client" xml:space="preserve">
     <value>Клиент</value>
@@ -509,5 +509,11 @@
   </data>
   <data name="Comments" xml:space="preserve">
     <value>Комментарии</value>
+  </data>
+  <data name="Ex1">
+    <value>EX-1</value>
+  </data>
+  <data name="T1">
+    <value>T1</value>
   </data>
 </root>
