--- a/Alicargo.DataAccess.Contracts/Resources/ApplicationFileType.pl.resx
+++ b/Alicargo.DataAccess.Contracts/Resources/ApplicationFileType.pl.resx
@@ -112,34 +112,34 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CP" xml:space="preserve">
-    <value>Счет-фактура</value>
+  <data name="CP">
+    <value>Faktura</value>
   </data>
-  <data name="DeliveryBill" xml:space="preserve">
-    <value>Счет за доставку</value>
+  <data name="DeliveryBill">
+    <value>Rachunek za dostawę</value>
   </data>
-  <data name="Invoice" xml:space="preserve">
-    <value>Инвойс</value>
+  <data name="Invoice">
+    <value>Faktura</value>
   </data>
-  <data name="Other" xml:space="preserve">
-    <value>Другое</value>
+  <data name="Packing">
+    <value>Opakowanie</value>
   </data>
-  <data name="Packing" xml:space="preserve">
-    <value>Пакинг</value>
-  </data>
-  <data name="Swift" xml:space="preserve">
+  <data name="Swift">
     <value>SWIFT</value>
   </data>
-  <data name="Torg12" xml:space="preserve">
-    <value>Торг 12</value>
+  <data name="Torg12">
+    <value>TORG 12</value>
   </data>
   <data name="Ex1">
     <value>EX-1</value>
+  </data>
+  <data name="Other">
+    <value>Inne</value>
   </data>
   <data name="T1">
     <value>T1</value>
