--- a/Alicargo.DataAccess.Contracts/Resources/EventType.ru.resx
+++ b/Alicargo.DataAccess.Contracts/Resources/EventType.ru.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ApplicationCreated" xml:space="preserve">
-    <value>Созадние заявки</value>
+    <value>Создание заявки</value>
   </data>
   <data name="ApplicationSetState" xml:space="preserve">
     <value>Установка статуса</value>
